Make necessary changes to fix plugin loading and classloading
Will allow SolarPaper-Server to create JavaPlugins rather than
  relying on the ailing JavaPluginLoader to do everything.

SimplePluginManager now permits a sealed hierarchy to enable
  BridgePluginManager.

There are some compatibility risks. Changing the concrete
  implementation of PluginManager and PluginLoader has the
  potential to break a few dumb plugins. Dropping support for
  static methods in JavaPlugin (getProvidingPlugin and getPlugin)
  could pose a bigger challenge; the latter at least is primarily
  used by poorly-coded plugins.