@@ -113,14 +113,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-			   <!-- <dependencies>
-					we need our custom version as it fixes some bugs on case sensitive file systems
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-eclipse</artifactId>
-						<version>2.8.2-spigotmc</version>
-					</dependency>
-				</dependencies> -->
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+                <!-- <dependencies>
+                     we need our custom version as it fixes some bugs on case sensitive file systems
+                     <dependency>
+                         <groupId>org.codehaus.plexus</groupId>
+                         <artifactId>plexus-compiler-eclipse</artifactId>
+                         <version>2.8.2-spigotmc</version>
+                     </dependency>
+                 </dependencies> -->
 			</plugin>
 		</plugins>
 	</build>
